# multiway_cut

./: LICENSE  Makefile  README.md  cplex_Makefile  galois.cpp  galois.h  old_main.cpp  pcmul_test.cpp  sc_makefile
project/: .gitignore  CMakeLists.txt  alias.txt  build.sh  clean.sh  function.sh  graph_dummy_test.exe.stackdump  main.cpp  make.sh  timeout.sh  todo.txt  uniform_matroid_test.exe.stackdump  update.sh
project/resources/: instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_3_(0).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_3_(1).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_3_(2).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_3_(3).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_3_(4).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_3_(5).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_3_(6).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_3_(7).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_3_(8).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_3_(9).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_3_metrics.csv  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_4_(0).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_4_(1).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_4_(2).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_4_(3).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_4_(4).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_4_(5).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_4_(6).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_4_(7).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_4_(8).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_4_(9).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_4_metrics.csv  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_5_(0).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_5_(1).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_5_(2).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_5_(3).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_5_(4).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_5_(5).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_5_(6).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_5_(7).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_5_(8).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_5_(9).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_5_metrics.csv  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_6_(0).dgf  instance_generation1000_ GSA ADP Schedule Contract with IBM Corp.3_6_(1).dgf  (+563 more)
project/src/: CMakeLists.txt  FindCPLEX.cmake
project/src/constants/: CMakeLists.txt
project/src/constants/src/: powers.cpp  primitives.cpp
project/src/galois/: CMakeLists.txt
project/src/galois/src/: carryless_multiplier_galois.cpp  carryless_multiplier_galois.h  galois.cpp  galois.h  igalois.cpp  igalois.h  logarithm_table_galois.cpp  logarithm_table_galois.h  naive_galois.cpp  naive_galois.h  pclmul.asm  pclmul.s  table_galois.cpp  table_galois.h  ugalois.cpp
project/src/galois/test/: add.cpp  carryless_multiplier_test.cpp  div.cpp  inversion_test.cpp  logarithm_table_test.cpp  mul.cpp  pcmul_test.cpp  table_test.cpp
project/src/gauss/: CMakeLists.txt
project/src/gauss/src/: gauss.cpp  gauss.h  independent_set.cpp  independent_set.h
project/src/gauss/test/: gaussian_elimination_test.cpp
project/src/graphs/: CMakeLists.txt
project/src/graphs/src/: decorated_graph.cpp  decorated_graph.h  graph.cpp  graph.h  planted_instance.cpp  planted_instance.h  sink_only_copies.cpp  sink_only_copies.h
project/src/graphs/test/: decorated_graph_test.cpp  graph_dummy_test.cpp  graph_operations_test.cpp  planted_instance_test.cpp  sink_only_copies_test.cpp
project/src/kernels/: CMakeLists.txt
project/src/kernels/src/: half_integral_reduction.cpp  half_integral_reduction.h  multiway_cut_kernel.cpp  multiway_cut_kernel.h
project/src/kernels/test/: half_integral_reduction_test.cpp  multiway_cut_kernel_test.cpp
project/src/main/: CMakeLists.txt
project/src/main/src/: instance_generation.cpp  main.cpp  memory.cpp  timeout.cpp
project/src/matroids/: CMakeLists.txt
project/src/matroids/src/: dual_matroid.cpp  dual_matroid.h  gammoid.cpp  gammoid.h  matroid.cpp  matroid.h  transversal_matroid.cpp  transversal_matroid.h  uniform_matroid.cpp  uniform_matroid.h
project/src/matroids/test/: gammoid_test.cpp  matroid_copy_constructor_test.cpp  matroid_dummy_test.cpp  transversal_matroid_test.cpp  uniform_matroid_test.cpp
project/src/metrics/: CMakeLists.txt
project/src/metrics/src/: metrics.cpp  metrics.h
project/src/readers/: CMakeLists.txt
project/src/readers/src/: dfg_reader.cpp  dfg_reader.h  dgf_reader.cpp  dgf_reader.h
project/src/readers/test/: dgf_reader_test.cpp  reader_dummy_test.cpp  sparse_codeminer_4_test.cpp
project/src/solvers/: CMakeLists.txt  FindCPLEX.cmake
project/src/solvers/src/: lpsolver.cpp  lpsolver.h  multiway_cut_relaxation_solver.cpp  multiway_cut_relaxation_solver.h  multiway_cut_solver.cpp  multiway_cut_solver.h  mwcsolver.cpp  mwcsolver.h
project/src/solvers/test/: correctness_test.cpp  dummy_test.cpp
project/src/stdafx/: CMakeLists.txt
project/src/stdafx/src/: stdafx.h
project/src/writers/: CMakeLists.txt
project/src/writers/src/: dgf_writer.cpp  dgf_writer.h  metrics_writer.cpp  metrics_writer.h
project/src/writers/test/: dgf_writer_test.cpp  metrics_writer_test.cpp
(+607 files in other folders)
