cmake_minimum_required(VERSION 3.5.2)
set (CMAKE_CXX_STANDARD 11)
project(multiwaycut)

include(FindCPLEX.cmake)

enable_testing()
add_subdirectory(main)
add_subdirectory(stdafx)
add_subdirectory(constants)
add_subdirectory(galois)
add_subdirectory(gauss)
add_subdirectory(matroids)
add_subdirectory(graphs)
add_subdirectory(readers)
add_subdirectory(solvers)
add_subdirectory(writers)
add_subdirectory(metrics)
add_subdirectory(kernels)